# analise-fundos-imobiliarios-tcc

./: .gitignore  README.md  TCC - Resultados.ipynb  TCC Alex Pytorch.ipynb  TCC Alex Resultados Final HeatMap.ipynb  TCC Alex Resultados v2.0.ipynb  TCC Alex Resultados v2.1.ipynb  TCC Alex Resultados v3.0.ipynb  TCC Alex Resultados v4.0-48.ipynb  TCC Alex Resultados v4.0-average-cluster.ipynb  TCC Alex Resultados v4.0.ipynb  TCC.ipynb  TCC_Alex_Resultados_Final.ipynb  TCC_Alex_Resultados_Final_por_periodo.ipynb  Untitled.ipynb  mkdocs.yml  pyproject.toml
analise_fundos_imobiliarios/: analytics.py  dataset.py  dataset_cvm.py  metrics.py  pre_processing_mensal_cvm.py  run.py  series.py  tcc_alex_resultados_final.py  tcc_alex_resultados_final_pytorch.py  utils.py
docs/: index.md
tests/: test_analytics.py  test_dataset.py  test_dataset_cvm.py  test_metrics.py  test_series.py
